NE-1398/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ne1398
spec:
  selector:
    app: ne1398
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
